src/objects/FGW_Application_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for the GovWatcher API</description>
    <fields>
        <fullName>Amendment_Tracking__c</fullName>
        <description>Set the behavior of Amendment tracking when tracking legislation
(&apos;None&apos;, &apos;Updates Only&apos;, &apos;All Amendments&apos;)</description>
        <inlineHelpText>Set the behavior of Amendment tracking when tracking legislation
(&apos;None&apos;, &apos;Updates Only&apos;, &apos;All Amendments&apos;)</inlineHelpText>
        <label>Amendment Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_User_Id__c</fullName>
        <description>User ID of the Chatter user</description>
        <inlineHelpText>User ID of the Chatter user</inlineHelpText>
        <label>Chatter User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_API_Name__c</fullName>
        <description>The class name of the Federal congressional API to be used for queries</description>
        <inlineHelpText>The class name of the Federal congressional API to be used for queries</inlineHelpText>
        <label>Federal API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_API_Name__c</fullName>
        <description>The class name of the State congressional API to be used for queries</description>
        <inlineHelpText>The class name of the State congressional API to be used for queries</inlineHelpText>
        <label>State API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FGW_Application_Settings</label>
</CustomObject>